Predict fuction text

--- a/Youtube_Predict.ipynb
+++ b/Youtube_Predict.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Youtube-Predict.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMVY6wKGaq7jTpygHoSExUF",
+      "authorship_tag": "ABX9TyM7JIFxyDecjoFOL1dTHF+P",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
         "<hr>\n",
         "<br>\n",
         "<h1><strong>Introdução</strong></h1>\n",
-        "<p>Para começar, vamos entender mais sobre o projeto. A ideia é implementar um modelo de Regressão Rinear para a predição da quantidade de views baseado em alguma outra variável que ainda vamos descobrir na fase de exploração de dados.</p>\n",
+        "<p>Para começar, vamos entender mais sobre o projeto. A ideia é implementar um modelo de Regressão Linear para a predição da quantidade de views baseado em alguma outra variável que ainda vamos descobrir na fase de exploração de dados.</p>\n",
         "<p>Vamos começar importanto as bibliotecas necessárias e base de dados, que por sinal está disponível no Kaggle como: Trending YouTube Video Statistics</p>\n"
       ]
     },
@@ -68,7 +68,7 @@
         "\n",
         "df = pd.read_csv('CAvideos.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -94,7 +94,7 @@
       "source": [
         "df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +277,7 @@
         "df = df[['views','likes','dislikes','comment_count']]\n",
         "df.head(3)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -401,7 +401,7 @@
         "correlation = df.corr()\n",
         "correlation"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,7 +501,7 @@
       "source": [
         "sns.heatmap(correlation, annot=True,linewidths=1)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -552,7 +552,7 @@
       "source": [
         "sns.regplot(x='views',y='likes',data=df)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -623,7 +623,7 @@
         "    b = r*(sy/sx)\n",
         "    return b"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -669,8 +669,17 @@
         "    y =  +  a + b*value\n",
         "    return y"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_z1Rybqk7BUs"
+      },
+      "source": [
+        "<p>Agora, nós já temos nossa função de predição de visualizações. Nós podemos apenas enviarmos o número para ela e a função se encarregará de treinar e prever o valor das visualizações.</p>"
+      ]
     },
     {
       "cell_type": "code",
